--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,10 @@
 	path = OrbitalEngine/vendor/glm
 	url = git@github.com:g-truc/glm.git
 	branch = master
+[submodule "vendor/glfw"]
+	path = vendor/glfw
+	url = git@github.com:glfw/glfw.git
+	branch = 3.3-stable
+[submodule "vendor/spdlog"]
+	path = vendor/spdlog
+	url = git@github.com:gabime/spdlog.git
