--- a/OrbitalEngine/OrbitalEngine.vcxproj
+++ b/OrbitalEngine/OrbitalEngine.vcxproj
@@ -78,11 +78,15 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(SolutionDir)vendor\glad\build\Debug</LibraryPath>
+    <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(SolutionDir)vendor\glad\build\Debug;$(SolutionDir)vendor\glfw\build\src\Debug</LibraryPath>
+    <CopyCppRuntimeToOutputDir>true</CopyCppRuntimeToOutputDir>
+    <PublicIncludeDirectories>$(SolutionDir)OrbitalEngine\include</PublicIncludeDirectories>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(SolutionDir)vendor\glad\build\Release</LibraryPath>
+    <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(SolutionDir)vendor\glad\build\Release;$(SolutionDir)vendor\glfw\build\src\Release</LibraryPath>
+    <CopyCppRuntimeToOutputDir>true</CopyCppRuntimeToOutputDir>
+    <PublicIncludeDirectories>$(SolutionDir)OrbitalEngine\include</PublicIncludeDirectories>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -116,17 +120,19 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>ORBITAL_COMPILING;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>ORBITAL_COMPILING;ORBITAL_DEBUG;ORBITAL_OPENGL;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)vendor\glad\include;$(SolutionDir)vendor\glm;$(SolutionDir)OrbitalEngine\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)vendor\glad\include;$(SolutionDir)vendor\glm;$(SolutionDir)vendor\glfw\include;$(SolutionDir)vendor\spdlog\include;$(SolutionDir)OrbitalEngine\include;$(SolutionDir)OrbitalEngine\src</AdditionalIncludeDirectories>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>OrbitalEngine/Context.h</PrecompiledHeaderFile>
       <ForcedIncludeFiles>OrbitalEngine\Context.h</ForcedIncludeFiles>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glad.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glad.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -136,37 +142,53 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>ORBITAL_COMPILING;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>ORBITAL_COMPILING;ORBITAL_DEBUG;ORBITAL_OPENGL;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)vendor\glad\include;$(SolutionDir)vendor\glm;$(SolutionDir)OrbitalEngine\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)vendor\glad\include;$(SolutionDir)vendor\glm;$(SolutionDir)vendor\glfw\include;$(SolutionDir)vendor\spdlog\include;$(SolutionDir)OrbitalEngine\include;$(SolutionDir)OrbitalEngine\src</AdditionalIncludeDirectories>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>OrbitalEngine/Context.h</PrecompiledHeaderFile>
       <ForcedIncludeFiles>OrbitalEngine\Context.h</ForcedIncludeFiles>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glad.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glad.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="include\OrbitalEngine\Application.cpp" />
     <ClCompile Include="src\Context.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">OrbitalEngine/Context.h</PrecompiledHeaderFile>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">OrbitalEngine/Context.h</PrecompiledHeaderFile>
     </ClCompile>
-    <ClCompile Include="src\TestPrivate.cpp" />
-    <ClCompile Include="src\TestPublic.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexBuffer.cpp" />
+    <ClCompile Include="src\Platform\Windows\W_Window.cpp" />
+    <ClCompile Include="src\Vertices.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\OrbitalEngine\Application.h" />
+    <ClInclude Include="include\OrbitalEngine\Constants.h" />
     <ClInclude Include="include\OrbitalEngine\Context.h" />
-    <ClInclude Include="include\OrbitalEngine\TestPublic.h" />
-    <ClInclude Include="src\TestPrivate.h" />
     <ClInclude Include="include\OrbitalEngine\Core.h" />
+    <ClInclude Include="include\OrbitalEngine\Shader.h" />
+    <ClInclude Include="include\OrbitalEngine\Tools.h" />
+    <ClInclude Include="include\OrbitalEngine\Vertices.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexBuffer.h" />
+    <ClInclude Include="src\Platform\Windows\W_Window.h" />
+    <ClInclude Include="include\OrbitalEngine\Window.h" />
+    <ClInclude Include="src\VertexBuffer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\shaders\Base.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
