--- a/OrbitalEngine/CMakeLists.txt
+++ b/OrbitalEngine/CMakeLists.txt
@@ -1,10 +1,13 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(OrbitalEngine VERSION 0.1.0)
 
+add_compile_definitions(ORBITAL_OPENGL)
 
-file(GLOB SOURCES src/*.cpp)
+file(GLOB_RECURSE SOURCES
+	src/*.cpp
+)
 
-add_library(${PROJECT_NAME} SHARED ${SOURCES})
+add_library(${PROJECT_NAME} STATIC ${SOURCES})
 
 target_compile_definitions(${PROJECT_NAME}
 	PRIVATE
@@ -16,12 +19,10 @@ target_include_directories(${PROJECT_NAME}
 		include
 		${CMAKE_SOURCE_DIR}/vendor/glm
 		${CMAKE_SOURCE_DIR}/vendor/glad/include
+		${CMAKE_SOURCE_DIR}/vendor/glfw/include
+		${CMAKE_SOURCE_DIR}/vendor/spdlog/include
 	PRIVATE
 		src
-)
-target_link_directories(${PROJECT_NAME}
-	PRIVATE
-		${CMAKE_SOURCE_DIR}/vendor/glad/build/Release
 )
 
 target_precompile_headers(${PROJECT_NAME} PUBLIC include/OrbitalEngine/Context.h)
@@ -30,4 +31,6 @@ target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 target_link_libraries(${PROJECT_NAME}
 	PRIVATE
 		glad
+		glfw
+		spdlog
 )
