--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 23)
 file(GLOB SOURCES src/*.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
+SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/PROFILE")
 
 target_include_directories(${PROJECT_NAME}
 	PUBLIC
@@ -14,3 +15,17 @@ target_include_directories(${PROJECT_NAME}
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE OrbitalEngine)
+
+
+
+add_executable(${PROJECT_NAME}NV ${SOURCES})
+SET_TARGET_PROPERTIES(${PROJECT_NAME}NV PROPERTIES LINK_FLAGS "/PROFILE")
+
+target_include_directories(${PROJECT_NAME}NV
+	PUBLIC
+		${CMAKE_SOURCE_DIR}/OrbitalEngine/include
+	PRIVATE
+		include
+)
+
+target_link_libraries(${PROJECT_NAME}NV PRIVATE OrbitalEngine)
