--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.16.0)
 project(Orbital VERSION 0.1.0)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS true)
+
 if(MSVC)
 message("Using MSVC " ${MSVC_VERSION})
 endif()
