--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,7 @@ _deps
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
 # Project related
+cpp.hint
 *.vcxproj*
 *.sln
 out
