- Switched to docking branch on imgui - Moved everything from Application to EditorApplication - Working docking - Working window resizing on the viewport - Added fonts for imgui - Added style for imgui

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,4 @@ add_subdirectory(vendor/imgui)
 add_subdirectory(vendor/fmt)
 
 add_subdirectory(OrbitalEngine)
-add_subdirectory(Sandbox)
+add_subdirectory(OrbitalEditor)
