--- a/OrbitalEditor/imgui.ini
+++ b/OrbitalEditor/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=778,198
+Pos=662,198
 Size=382,306
 Collapsed=0
 
@@ -64,9 +64,10 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Scene Viewport]
-Pos=253,279
-Size=733,318
+Pos=191,0
+Size=1179,749
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Dear ImGui Style Editor]
 Pos=529,159
