Working Hierarchy component

--- a/OrbitalEditor/imgui.ini
+++ b/OrbitalEditor/imgui.ini
@@ -1,11 +1,11 @@
 [Window][Debug##Default]
-Pos=662,198
-Size=382,306
+Pos=583,138
+Size=261,620
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1079,0
-Size=521,900
+Pos=1687,0
+Size=233,1027
 Collapsed=0
 DockId=0x00000002,0
 
@@ -40,7 +40,7 @@ Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1600,900
+Size=1920,1027
 Collapsed=0
 
 [Window][Example: Log]
@@ -59,13 +59,13 @@ Collapsed=0
 
 [Window][Debug informations]
 Pos=0,0
-Size=199,900
+Size=286,221
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000007,0
 
 [Window][Scene Viewport]
-Pos=201,0
-Size=876,900
+Pos=288,0
+Size=1397,1027
 Collapsed=0
 DockId=0x00000001,0
 
@@ -83,6 +83,18 @@ Collapsed=0
 Pos=61,66
 Size=273,308
 Collapsed=0
+
+[Window][Scene hierarchy]
+Pos=0,182
+Size=286,718
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Hierarchy Panel]
+Pos=0,223
+Size=286,804
+Collapsed=0
+DockId=0x00000008,0
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -195,9 +207,13 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1600,900 Split=X Selected=0x06DE3C0F
-  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=199,697 Selected=0x1BE033ED
-  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=1399,697 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=876,697 CentralNode=1 Selected=0x06DE3C0F
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=521,697 Selected=0xE87781F4
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1027 Split=X Selected=0x06DE3C0F
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=286,697 Split=Y Selected=0x1BE033ED
+    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=199,180 Split=Y Selected=0x1BE033ED
+      DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=286,194 Selected=0x1BE033ED
+      DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=286,704 Selected=0xE096E5AE
+    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=199,718 Selected=0x9DEC7C02
+  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=1312,697 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1077,697 CentralNode=1 Selected=0x06DE3C0F
+    DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=233,697 Selected=0xE87781F4
 
