--- a/OrbitalEditor/CMakeLists.txt
+++ b/OrbitalEditor/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 3.16.0)
 project(OrbitalEditor VERSION 0.1.0)
 set(CMAKE_CXX_STANDARD 23)
 
-file(GLOB SOURCES src/*.cpp src/*.h)
+file(GLOB_RECURSE SOURCES
+        *.cpp
+        *.h
+)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
