Working Hierarchy panel

--- a/OrbitalEditor/imgui.ini
+++ b/OrbitalEditor/imgui.ini
@@ -4,8 +4,8 @@ Size=261,620
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1687,0
-Size=233,1027
+Pos=1144,0
+Size=456,900
 Collapsed=0
 DockId=0x00000002,0
 
@@ -40,7 +40,7 @@ Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1920,1027
+Size=1600,900
 Collapsed=0
 
 [Window][Example: Log]
@@ -59,15 +59,15 @@ Collapsed=0
 
 [Window][Debug informations]
 Pos=0,0
-Size=286,221
+Size=363,900
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000005,1
 
 [Window][Scene Viewport]
-Pos=288,0
-Size=1397,1027
+Pos=365,0
+Size=777,900
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000004,0
 
 [Window][Dear ImGui Style Editor]
 Pos=529,159
@@ -91,10 +91,20 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Hierarchy Panel]
-Pos=0,223
-Size=286,804
+Pos=0,0
+Size=363,900
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000005,0
+
+[Window][Example: Custom rendering]
+Pos=436,199
+Size=508,554
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=61,66
+Size=716,894
+Collapsed=0
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -207,13 +217,11 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1027 Split=X Selected=0x06DE3C0F
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=286,697 Split=Y Selected=0x1BE033ED
-    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=199,180 Split=Y Selected=0x1BE033ED
-      DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=286,194 Selected=0x1BE033ED
-      DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=286,704 Selected=0xE096E5AE
-    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=199,718 Selected=0x9DEC7C02
-  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=1312,697 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1077,697 CentralNode=1 Selected=0x06DE3C0F
-    DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=233,697 Selected=0xE87781F4
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1600,900 Split=X Selected=0x06DE3C0F
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1142,900 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=363,697 Split=Y Selected=0x1BE033ED
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=199,180 Selected=0xE096E5AE
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=199,718 Selected=0x9DEC7C02
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=777,697 CentralNode=1 Selected=0x06DE3C0F
+  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=456,900 Selected=0xE87781F4
 
