Working ECS inspector, Scene graph. Corrected bug with batches. Added BatchCount to the metrics

--- a/OrbitalEditor/imgui.ini
+++ b/OrbitalEditor/imgui.ini
@@ -1,13 +1,13 @@
 [Window][Debug##Default]
-Pos=583,138
+Pos=315,53
 Size=261,620
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1144,0
-Size=456,900
+Pos=1026,0
+Size=340,360
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000008,0
 
 [Window][DockSpace Demo]
 Size=1440,810
@@ -40,7 +40,7 @@ Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1600,900
+Size=1366,715
 Collapsed=0
 
 [Window][Example: Log]
@@ -59,15 +59,15 @@ Collapsed=0
 
 [Window][Debug informations]
 Pos=0,0
-Size=363,900
+Size=321,502
 Collapsed=0
-DockId=0x00000005,1
+DockId=0x00000005,0
 
 [Window][Scene Viewport]
-Pos=365,0
-Size=777,900
+Pos=323,0
+Size=701,715
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000001,0
 
 [Window][Dear ImGui Style Editor]
 Pos=529,159
@@ -80,7 +80,7 @@ Size=423,234
 Collapsed=0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=61,66
+Pos=134,88
 Size=273,308
 Collapsed=0
 
@@ -88,13 +88,13 @@ Collapsed=0
 Pos=0,182
 Size=286,718
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000003,0
 
 [Window][Hierarchy Panel]
 Pos=0,0
-Size=363,900
+Size=321,502
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000005,1
 
 [Window][Example: Custom rendering]
 Pos=436,199
@@ -105,6 +105,33 @@ Collapsed=0
 Pos=61,66
 Size=716,894
 Collapsed=0
+
+[Window][Inspector]
+Pos=1026,0
+Size=340,715
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Delete?]
+Pos=547,288
+Size=276,171
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=60,60
+Size=516,161
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Metrics]
+Pos=0,504
+Size=321,211
+Collapsed=0
+DockId=0x00000009,0
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -217,11 +244,15 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1600,900 Split=X Selected=0x06DE3C0F
-  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1142,900 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=363,697 Split=Y Selected=0x1BE033ED
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=199,180 Selected=0xE096E5AE
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=199,718 Selected=0x9DEC7C02
-    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=777,697 CentralNode=1 Selected=0x06DE3C0F
-  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=456,900 Selected=0xE87781F4
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1366,715 Split=X Selected=0x06DE3C0F
+  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=235,697 Selected=0x1BE033ED
+  DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=675,697 Split=X Selected=0x06DE3C0F
+    DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=321,749 Split=Y Selected=0xE096E5AE
+      DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=321,502 Selected=0xE096E5AE
+      DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=321,211 Selected=0x8411189D
+    DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=1047,749 Split=X Selected=0x06DE3C0F
+      DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=705,749 CentralNode=1 Selected=0x06DE3C0F
+      DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=340,749 Split=Y Selected=0xE87781F4
+        DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=340,377 Selected=0xE87781F4
+        DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=340,370 Selected=0xE7039252
 
