Working Batches, now fixing the framebuffer

--- a/OrbitalEditor/imgui.ini
+++ b/OrbitalEditor/imgui.ini
@@ -4,8 +4,8 @@ Size=261,620
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=936,0
-Size=434,398
+Pos=1166,0
+Size=434,479
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -40,7 +40,7 @@ Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1370,749
+Size=1600,900
 Collapsed=0
 
 [Window][Example: Log]
@@ -64,8 +64,8 @@ Collapsed=0
 DockId=0x0000000C,1
 
 [Window][Scene Viewport]
-Pos=224,0
-Size=710,647
+Pos=365,0
+Size=799,557
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -92,7 +92,7 @@ DockId=0x00000003,0
 
 [Window][Hierarchy Panel]
 Pos=0,0
-Size=222,409
+Size=363,666
 Collapsed=0
 DockId=0x00000006,0
 
@@ -107,10 +107,10 @@ Size=716,894
 Collapsed=0
 
 [Window][Inspector]
-Pos=936,400
-Size=434,349
+Pos=0,668
+Size=363,232
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x00000008,0
 
 [Window][Delete?]
 Pos=662,364
@@ -128,20 +128,20 @@ Size=520,600
 Collapsed=0
 
 [Window][Metrics]
-Pos=0,411
-Size=222,338
+Pos=1166,481
+Size=434,419
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000C,0
 
 [Window][Assets]
-Pos=224,649
-Size=710,100
+Pos=365,559
+Size=799,341
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Files]
-Pos=224,649
-Size=710,100
+Pos=365,559
+Size=799,341
 Collapsed=0
 DockId=0x0000000D,1
 
@@ -159,11 +159,11 @@ Collapsed=0
 Pos=0,333
 Size=222,416
 Collapsed=0
-DockId=0x00000009,1
+DockId=0x00000006,1
 
 [Window][Batches]
-Pos=224,649
-Size=710,100
+Pos=365,559
+Size=799,341
 Collapsed=0
 DockId=0x0000000D,2
 
@@ -297,17 +297,17 @@ Column 0  Width=16
 Column 1  Width=555
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1370,749 Split=X Selected=0x06DE3C0F
-  DockNode        ID=0x00000005 Parent=0x8B93E3BD SizeRef=222,1027 Split=Y Selected=0x8411189D
-    DockNode      ID=0x00000006 Parent=0x00000005 SizeRef=546,492 Selected=0xE096E5AE
-    DockNode      ID=0x00000009 Parent=0x00000005 SizeRef=546,406 Selected=0x8411189D
-  DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=1146,1027 Split=X
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1600,900 Split=X Selected=0x06DE3C0F
+  DockNode        ID=0x00000005 Parent=0x8B93E3BD SizeRef=363,1027 Split=Y Selected=0xE096E5AE
+    DockNode      ID=0x00000006 Parent=0x00000005 SizeRef=363,760 Selected=0xE096E5AE
+    DockNode      ID=0x00000008 Parent=0x00000005 SizeRef=363,265 Selected=0xE7039252
+  DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=1555,1027 Split=X
     DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=235,697 Selected=0x1BE033ED
     DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=675,697 Split=X Selected=0x06DE3C0F
-      DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=940,749 Split=Y Selected=0x06DE3C0F
-        DockNode  ID=0x0000000B Parent=0x00000001 SizeRef=491,647 CentralNode=1 Selected=0x06DE3C0F
-        DockNode  ID=0x0000000D Parent=0x00000001 SizeRef=491,100 Selected=0x86FA2F90
+      DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1119,749 Split=Y Selected=0x06DE3C0F
+        DockNode  ID=0x0000000B Parent=0x00000001 SizeRef=491,406 CentralNode=1 Selected=0x06DE3C0F
+        DockNode  ID=0x0000000D Parent=0x00000001 SizeRef=491,341 Selected=0x86FA2F90
       DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=434,749 Split=Y Selected=0xE7039252
         DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=660,479 Selected=0xE87781F4
-        DockNode  ID=0x0000000C Parent=0x00000002 SizeRef=660,419 Selected=0xE7039252
+        DockNode  ID=0x0000000C Parent=0x00000002 SizeRef=660,419 Selected=0x8411189D
 
