--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/c++,cmake,visualstudio,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,cmake,visualstudio,visualstudiocode
 
+OrbitalEditor/imgui.ini
+
 ### C++ ###
 # Prerequisites
 *.d
