--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_subdirectory(vendor/glfw)
 add_subdirectory(vendor/glm)
 add_subdirectory(vendor/imgui)
 add_subdirectory(vendor/fmt)
+add_subdirectory(vendor/assimp)
 
 add_subdirectory(OrbitalEngine)
 add_subdirectory(OrbitalEditor)
