--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,7 @@
 [submodule "vendor/assimp"]
 	path = vendor/assimp
 	url = git@github.com:assimp/assimp.git
+[submodule "vendor/uuid_v4"]
+	path = vendor/uuid_v4
+	url = git@github.com:crashoz/uuid_v4.git
+	branch = v1.0.0
